[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Exercise for optimization"
homepage = "https://github.com/SaitoTsutomu/opt-quest"
license = "Apache-2.0"
name = "opt-quest"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
gunicorn = "^22.0.0"
more-itertools = "^9.1.0"
psycopg2-binary = "^2.9.6"
python = "^3.11"
toml = "^0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
