[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Exercise for optimization"
homepage = "https://github.com/SaitoTsutomu/opt-quest"
license = "Apache-2.0"
name = "opt-quest"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
flask = "^3.0"
flask-sqlalchemy = "^3.1"
gunicorn = "^23.0"
more-itertools = "^10.4"
psycopg2-binary = "^2.9"
python = "^3.11"
toml = "^0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
